disable autoscroll and fitToSection

--- a/Site/app/hosp.html
+++ b/Site/app/hosp.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header class="navbar navbar-default navbar-fixed-top top-nav-collapse" role="navigation" style="height:10%;">
+    <header class="container navbar navbar-custom" role="navigation">
         <div class="navbar-header ">
             <a class="navbar-brand " href="index.html">
                 <img style="margin-left:-15px;" src="images/logo.png">
