--- a/B2B/app/index.html
+++ b/B2B/app/index.html
@@ -26,6 +26,7 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <div>allo</div>
 
 
     <!-- build:js(.) scripts/vendor.js -->
