--- a/B2B/app/index.html
+++ b/B2B/app/index.html
@@ -8,10 +8,12 @@
 
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="/bower_components/bootstrap-vertical-tabs/bootstrap.vertical-tabs.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -23,10 +25,106 @@
 
   </head>
   <body>
-    <!--[if lt IE 10]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-    <div>allo</div>
+
+      <div class="header" >
+
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="#" style="margin-top: 5px;">services</a></li>
+          <li><a href="partner.html" style="margin-top: 5px;">partners</a></li>
+          <li><a href="#" style="margin-top: 5px;">Connect with us</a></li>
+        </ul>
+        <p>LOGO</P>
+        <!-- <img src="images/mwd.png" width="100" height="30"> -->
+
+      </div>
+      <div class="main">
+        <!-- <div class="row"> -->
+          <!-- <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+            <h3 style="padding-right: 0px; padding-left: 50px;  margin-top: 50px;">HELLO</h3>
+            <h1 style="padding-right: 0px; padding-left: 50px;">this is new website</h1>
+          </div> -->
+          <!-- <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9"> -->
+      <div class="jumbotron" style="padding-right: 20px; margin-top: 30px; margin-right: 10px; margin-left: 10px">
+      <div class="row">
+      <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+          <p>
+          <img style="margin-left: 10px; width: 700px; height: 415px;" src="images/a.jpeg">
+          </p>
+          <!-- <p>
+          <img src="images/a.jpeg" width="30" height="30"  style="margin-left: 10px; width: 120px; height: 70px;" >
+          </p>
+          <p>
+          <img src="images/a.jpeg" width="30" height="30"  style="margin-left: 10px; width: 120px; height: 70px;" >
+          </p>
+          <p>
+          <img src="images/a.jpeg" width="30" height="30"  style="margin-left: 10px; width: 120px; height: 70px;">
+          </p>
+          <p>
+          <img src="images/a.jpeg" width="30" height="30"  style="margin-left: 10px; width: 120px; height: 70px;">
+          </p> -->
+          </div>
+
+          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+            <!-- <p> <input class="btn-btn-default" type="button" value="Cancer Care" style="width: 290px; height: 70px;"></p> -->
+          <p><a class="btn btn-large btn-info" href="try.html" style="width: 290px; height: 70px;">Cancer Care</a></p>
+          <p><a class="btn btn-large btn-info" href="try.html" style="width: 290px; height: 70px;">Bones & Joints</a></p>
+          <p><a class="btn btn-large btn-info" href="try.html" style="width: 290px; height: 70px;">Cosmetics Treatment</a></p>
+          <p><a class="btn btn-large btn-info" href="try.html" style="width: 290px; height: 70px;">IVF & Reproductive Medicine</a></p>
+          <p><a class="btn btn-large btn-info" href="try.html" style="width: 290px; height: 70px;">Ayurveda & Wellness</a></p>
+          </div>
+          </div>
+          </div>
+
+          <!-- </div> -->
+
+
+        <!-- </div> -->
+      </div>
+
+
+        <!-- <div class="row marketing">
+          <div class="row">
+            <div class="col-xs-4 col-md-4">
+              <img src="images/images.jpeg" width="242" height="200" style="padding-left: 20px;">
+              <p class="title" style="padding-left: 20px;">What is medical travel?</p>
+              <p style="padding-left: 20px;">Medical travel is the practice of seeking medical care in a location outside of your permanent residence. It can involve long or short stays for elective treatment or chronic care management.</p>
+
+            </div>
+
+            <div class="col-xs-4 col-md-4">
+              <img src="images/mwd.png" width="242" height="200">
+              <p class="title">A curated marketplace?</p>
+              <p>MEDIGO carefully selects which clinics and hospitals are listed on our platform. Each clinic and hospital is checked for physician expertise, accreditations and certifications, facility condition, and patient satisfaction.</p>
+
+            </div>
+
+            <div class="col-xs-4 col-md-4">
+              <img src="images/images.jpeg" width="242" height="200">
+              <p class="title">Not sure where to start?</p>
+              <p>just let us know what you are looking for and our Care Team will get back to you as soon as possible.</p>
+
+            </div>
+
+          </div>
+        </div> -->
+        <div class="footer">
+        <div class="row">
+        <div class="col-md-3">
+            <p style="padding-left: 10px; margin-top: 10px;" > countries|provinces/regions|cities</p>
+            <p style="padding-left: 10px;">
+            <span class="glyphicon glyphicon-copyright-mark"></span>2013 Inspirock - All rights reserved.</p>
+        </div>
+        <div class="col-md-3"></div>
+        <div class="col-md-3"></div>
+        <div class="col-md-3">
+
+             <span style="text-align:right;"><i class="fa fa-facebook" href="http://www.facebook.com" style="padding-left: 10px; padding-right: 10px; width: 10px; height: 20px;margin-top:10px;"></i></span>
+              <span style="text-align:right;"><i class="fa fa-twitter" style="padding-left: 10px; padding-right: 10px; width: 10px; height: 20px; margin-top:10px;"></i></span>
+              <span style="text-align:right;"><i class="fa fa-google-plus" style="padding-left: 10px; padding-right: 10px; width: 10px; height: 20px;margin-top:10px;"></i></span>
+        </div>
+        </div>
+        </div>
+
 
 
     <!-- build:js(.) scripts/vendor.js -->
@@ -57,13 +155,13 @@
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
+    <!--<script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
       function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
       e=o.createElement(i);r=o.getElementsByTagName(i)[0];
       e.src='https://www.google-analytics.com/analytics.js';
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
       ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
+    </script>-->
   </body>
 </html>
