--- a/B2C/app/index.html
+++ b/B2C/app/index.html
@@ -23,6 +23,90 @@
 
   </head>
   <body>
+    <div class="header" >
+       <ul class="nav nav-pills pull-right">
+        <li class="active"><a href="#" style="margin-top: 5px;">services</a></li>
+        <li><a href="#" style="margin-top: 5px;">partners</a></li>
+        <li><a href="#" style="margin-top: 5px;">Connect with us</a></li>
+        </ul>
+       <img style="width: 170px; height: 40px; margin-left: 12px; margin-top: 10px;" src="images/logo.png">
+       </div>
+       <div class="image">
+         <img src="images/hosp3.png"style="width:1300px;height:300px;" />
+         <!-- <img src="images/logo.png" style="width: 1300px; height: 300px;" > -->
+       </div>
+
+
+   <div class="jumbotron">
+   <div class="row">
+    <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8" style="border-right:2px solid #e5e5e5">
+
+<div class="row">
+  <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+    <div class="lead">
+    <img style="width: 200px; height: 200px; padding-left: 10px; margin-left: 10px;" src="images/dent2.png">
+    </div>
+  </div>
+  <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8" style="padding-top: 15px;">
+    <h2>PLMN QWER</h2>
+    <p>plastic surgeon</p>
+    <p>Panjim goa</p>
+  </div>
+</div>
+
+
+
+
+
+
+
+      <div class="text" style="padding-left: 10px;">
+    <h3 style="text-align: left;float:left;margin-left: 30px;">5K Views</h3>
+     <h3 style="text-align: right;float:right; margin-right: 180px;">9 Years Experience</h3>
+     <hr style="clear:both;"/>
+      </div>
+
+    <div class="tabs">
+   <!-- Nav tabs -->
+    <ul class="nav nav-tabs nav-justified" role="tablist" style="margin-left: 10px;">
+    <li role="presentation" class="active"><a href="#bio" aria-controls="Bio" role="tab" data-toggle="tab" >BIO</a></li>
+    <li role="presentation"><a href="#awards" aria-controls="awards" role="tab" data-toggle="tab" >AWARDS</a></li>
+    <li role="presentation"><a href="#publications" aria-controls="publications" role="tab" data-toggle="tab" >PUBLICATIONS</a></li>
+
+    </ul>
+
+  <!-- Tab panes -->
+    <div class="tab-content" style="margin-left: 10px;">
+    <div role="tabpanel" class="tab-pane active" id="bio">hiii</div>
+    <div role="tabpanel" class="tab-pane" id="awards">..hello</div>
+    <div role="tabpanel" class="tab-pane" id="publications">..fhytu.</div>
+    </div>
+
+   </div>
+
+    </div>
+
+    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4" style="margin-right: 0px; margin-left: -15px;">
+      <div class="form" style="padding: 20px; margin-top: -10px;">
+      <strong>Request Consultation</strong>
+      <br>
+      <input type="name" class="form-control" id="name" placeholder="Name"><br>
+      <input type="email" class="form-control" id="email" placeholder="Email"><br>
+      <input type="phone" class="form-control" id="phone" placeholder="Phone"><br>
+    <textarea class="form-control" rows="5" placeholder="Query"></textarea><br>
+      <button type="submit" class="btn btn-default">Submit Request</button>
+     </div>
+     </div>
+   </div>
+ </div>
+
+ <div class="footer">
+   <p style="padding-left: 10px; margin-top: 10px;" > countries|provinces/regions|cities</p>
+   <p style="padding-left: 10px;">
+   <span class="glyphicon glyphicon-copyright-mark"></span>2013 Inspirock - All rights reserved.</p>
+ </div>
+
+
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
